fixed bug enemy dead by jumping up

--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('img/website_background/desert4.png');
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url(img/website_background/desert4.png) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     font-family: 'marlboro', Arial, Helvetica, sans-serif;
 }
 
@@ -27,6 +29,7 @@ h1 {
     letter-spacing: 5px;
     font-size: 400%;
     user-select: none;
+    text-align: center;
 }
 
 canvas {
@@ -345,8 +348,9 @@ a {
 
     #start-button {
         top: 15%;
-        left: 30%;
+        left: 28%;
         transform: translate(-50%, -50%);
+        padding: 2px 6px;
     }
 
     .options-button-style img {
